<resources>
    <string name="app_name">PBA Helper</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sing_in">Sing in</string>
    <string name="tool_icon">tool icon</string>
    <string name="code">Code:</string>
    <string name="description">Description:</string>
    <string name="name">Name:</string>
    <string name="place">Place:</string>
    <string name="help">Help</string>
    <string name="profile">Profile</string>
    <string name="wealth">Wealth</string>
    <string name="search_with_qr_code">Identify</string>
    <string name="column">Column:</string>
    <string name="self">Self:</string>
    <string name="row">Row:</string>
    <string name="title_for_dialog_qr_code">You can choose action with that tool</string>
    <string name="you_should_choose_the_action">You should choose the action</string>
    <string name="take_tool_back">Take tool back</string>
    <string name="give_tool_to_worker">give tool to worker</string>
    <string name="actions_with_tool">actions with tool</string>
    <string name="take_tool_back_to_storage">take tool back to storage</string>
    <string name="give_tool_from_storage">give tool from storage</string>
    <string name="send_tool_to_sharpen">send tool to sharpening</string>
    <string name="write_off_tool">write off tool</string>
    <string name="qr_code_action">QR-CODE action</string>
    <string name="actions_for_search_tool">actions for search tool</string>
    <string name="search_in_database">search in database</string>
    <string name="search_with_qr_code_2">search with qr-code</string>
    <string name="search_string_template">Code: %s Name: %s Place: Shelf: %s Column: %s Row:%s</string>
    <string name="cutting_tools">Cutting tools</string>
    <string name="measuring_tools">Measuring tools</string>
    <string name="helper_tools">Helper tools</string>
    <string name="amount">Amount:</string>
    <string name="storage_weatlth">Storage</string>
    <string name="notes">Notes</string>
    <string name="name_label">Name:</string>
    <string name="surname">Surname:</string>
    <string name="patronymic">Patronymic:</string>
    <string name="department">Department:</string>
    <string name="work_since">Work since:</string>
    <string name="tool">Tool:</string>
    <string name="sender">Sender:</string>
    <string name="receiver">Receiver:</string>
    <string name="search_tool_by_code">search tool by code</string>
    <string name="action_with_worker_in_department">action with worker in department</string>
    <string name="list_of_workers_in_department">List of workers in department</string>
    <string name="create_transaction">Create transaction:</string>
    <string name="set_amount">set amount</string>
    <string name="set_tool">Set tool</string>
    <string name="set_sender">Set sender</string>
    <string name="set_receiver">Set receiver</string>
    <string name="commit">Commit</string>
    <string name="choose_worker">Choose worker</string>
    <string name="enter_worker_surname">Enter worker surname</string>
    <string name="enter_part_of_code">Enter part of code</string>
    <string name="enter_the_number">enter the number</string>
    <string name="from_main_storage">From main storage</string>
    <string name="sharpening">Sharpening</string>
    <string name="decommissioned_tools">Decommissioned tools</string>
    <string name="important_information">Important information</string>
    <string name="you_don_t_set_the_sender">You don\'t set the sender</string>
    <string name="you_don_t_set_the_receiver">You don\'t set the receiver</string>
    <string name="you_don_t_set_the_tool">You don\'t set the tool</string>
    <string name="doesn_t_have">%1$s doesn\'t have %2$s</string>
    <string name="have_only">"%1$s have only "</string>
    <string name="last_transactions">Last transactions:</string>
    <string name="transactions">Transactions</string>
    <string name="transactions_with_sharpening">Transactions with sharpening</string>
    <string name="transaction_with_main_storage">Transaction with main storage</string>
    <string name="transactions_with_decommissioned_tools">Transactions with decommissioned tools</string>
    <string name="network_unreachable_check_your_internet_connection">Network unreachable - check your internet connection</string>
    <string name="server_doesn_t_respond_try_again_a_little_bit_later">Server doesn\'t respond. Try again a little bit later</string>
    <string name="update_transactions">Update transactions</string>
    <string name="get_from_main_storage">get from main storage</string>
    <string name="get_from_sharpening">get from sharpening</string>
    <string name="give_tool">Give tool</string>
    <string name="you_should_enter_4_number_of_tool_code">You should enter 4 number of tool code</string>
    <string name="wrong_login_or_password">wrong login or password</string>
    <string name="tools_in_storage">tools in storage</string>
    <string name="token_was_expired">Token was expired</string>
    <string name="worker">Worker:</string>
    <string name="department_1">Department:</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_tool">Find tool</string>

</resources>