<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
tools:showIn="navigation_view">
    <item android:title="@string/actions_with_tool"
    android:enabled="false"/>
    <group
            android:id="@+id/group1">
        <item
                android:id="@+id/takeToolFragment"
                android:title="@string/take_tool_back_to_storage"
                android:checked="true"/>
        <item
                android:id="@+id/giveToolFragment"
                android:title="@string/give_tool_from_storage"/>
        <item
                android:id="@+id/sendToolFragment"
                android:title="@string/send_tool_to_sharpen"/>
        <item
                android:id="@+id/writeOffToolFragment"
                android:title="@string/write_off_tool"/>
    </group>

    <item android:title="@string/actions_for_search_tool"
    android:enabled="false"/>

    <group
            android:id="@+id/group2">
        <item
                android:id="@+id/item4"
                android:title="@string/search_in_database"
                android:checked="true"/>
        <item
                android:id="@+id/cameraFragment"
                android:title="@string/search_with_qr_code_2"/>
    </group>
</menu>