<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/storage_wealth"
        android:icon="@drawable/baseline_store_24"
        android:title="@string/storage_weatlth" />

    <item
        android:id="@+id/wealth"
        android:icon="@drawable/baseline_shopping_basket_24"
        android:title="@string/wealth" />

    <item
        android:id="@+id/cameraFragment"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search_with_qr_code" />

    <item
        android:id="@+id/notes_fragment"
        android:icon="@drawable/baseline_edit_note_24"
        android:title="@string/notes" />
</menu>