<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenter.ToolFragment">


    <ImageView
        android:id="@+id/icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/tool_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/tw_code_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/code"
        app:layout_constraintStart_toEndOf="@+id/icon"
        app:layout_constraintTop_toTopOf="@+id/icon" />

    <TextView
        android:id="@+id/tw_code"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tw_code_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tw_code_label"
        app:layout_constraintTop_toTopOf="@+id/tw_code_label"
        tools:text="1111-1111" />

    <TextView
        android:id="@+id/tw_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintBottom_toBottomOf="@+id/icon"
        app:layout_constraintStart_toStartOf="@+id/tw_code_label"
        app:layout_constraintTop_toBottomOf="@+id/tw_code_label" />

    <TextView
        android:id="@+id/tw_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tw_name_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tw_name_label"
        app:layout_constraintTop_toTopOf="@+id/tw_name_label"
        tools:text="Inner CNMG120408" />

    <TextView
        android:id="@+id/tw_place_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/place"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon" />

    <TextView
        android:id="@+id/tw_shelf_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/self"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tw_place_label"
        app:layout_constraintEnd_toStartOf="@+id/tw_column_label"/>



    <TextView
        android:id="@+id/tw_column_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/column"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/tw_shelf_label"
        app:layout_constraintTop_toTopOf="@+id/tw_shelf_label"
        app:layout_constraintEnd_toStartOf="@+id/tw_row_label"/>

    <TextView
        android:id="@+id/tw_row_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/row"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/tw_column_label"
        app:layout_constraintTop_toTopOf="@+id/tw_column_label"
        app:layout_constraintEnd_toEndOf="parent"/>



    <TextView
        android:id="@+id/tw_shelf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="42"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/tw_shelf_label"
        app:layout_constraintTop_toTopOf="@+id/tw_shelf_label"
        app:layout_constraintBottom_toBottomOf="@+id/tw_shelf_label"/>



    <TextView
        android:id="@+id/tw_column"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="3"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/tw_column_label"
        app:layout_constraintTop_toTopOf="@+id/tw_column_label"
        app:layout_constraintBottom_toBottomOf="@+id/tw_column_label" />

    <TextView
        android:id="@+id/tw_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="4"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/tw_row_label"
        app:layout_constraintTop_toTopOf="@+id/tw_row_label"
        app:layout_constraintBottom_toBottomOf="@+id/tw_row_label" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:maxHeight="300dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tw_row_label"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tw_descriptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@tools:sample/lorem/random"
                android:textSize="18sp"
                android:layout_marginHorizontal="20dp" />

            <TextView
                android:id="@+id/tw_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:textSize="18sp"
                tools:text="@tools:sample/lorem/random" />
        </LinearLayout>


</androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>