<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/record_card_icon_tool"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/tool_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/record_card_tw_code_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/code"
            app:layout_constraintStart_toEndOf="@+id/record_card_icon_tool"
            app:layout_constraintTop_toTopOf="@+id/record_card_icon_tool" />

        <TextView
            android:id="@+id/record_card_tw_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/record_card_tw_code_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/record_card_tw_code_label"
            app:layout_constraintTop_toTopOf="@+id/record_card_tw_code_label"
            tools:text="1111-1111" />

        <TextView
            android:id="@+id/record_card_tw_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_constraintBottom_toBottomOf="@+id/record_card_icon_tool"
            app:layout_constraintStart_toStartOf="@+id/record_card_tw_code_label"
            app:layout_constraintTop_toBottomOf="@+id/record_card_tw_code_label" />

        <TextView
            android:id="@+id/record_card_tw_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/record_card_tw_name_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/record_card_tw_name_label"
            app:layout_constraintTop_toTopOf="@+id/record_card_tw_name_label"
            tools:text="Inner CNMG120408" />

        <TextView
            android:id="@+id/record_card_tw_place_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/amount"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@+id/record_card_icon_tool"
            app:layout_constraintTop_toBottomOf="@+id/record_card_icon_tool" />

        <TextView
            android:id="@+id/record_card_tw_amount_tool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/record_card_tw_code"
            app:layout_constraintStart_toStartOf="@+id/record_card_tw_code"
            app:layout_constraintTop_toTopOf="@+id/record_card_tw_place_label"
            tools:text="25" />


        <TextView
            android:id="@+id/record_card_tw_worker_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/worker"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@+id/record_card_icon_tool"
            app:layout_constraintTop_toBottomOf="@+id/record_card_tw_place_label" />

        <TextView
            android:id="@+id/record_card_tw_worker_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/record_card_tw_code"
            app:layout_constraintStart_toStartOf="@+id/record_card_tw_code"
            app:layout_constraintTop_toTopOf="@+id/record_card_tw_worker_name_label"
            tools:text="John week" />

        <TextView
            android:id="@+id/record_card_department_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/department_1"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@+id/record_card_icon_tool"
            app:layout_constraintTop_toBottomOf="@+id/record_card_tw_worker_name" />

        <TextView
            android:id="@+id/record_card_tw_department"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:textSize="25sp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/record_card_tw_code"
            app:layout_constraintStart_toStartOf="@+id/record_card_tw_code"
            app:layout_constraintTop_toTopOf="@+id/record_card_department_label"
            tools:text="Department 19" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>